# Pirmas-Projektas2

./: .gitignore  C.cpp  DataManip.cpp  DataManip.h  IOmanip.cpp  IOmanip.h  README.md  TemplateContainer.h  lib.h  main.cpp  vector  vector.cpp
Vector_Class/: CMakeLists.txt  DataManip.cpp  DataManip.h  Doxyfile  IOmanip.cpp  IOmanip.h  TestResultFile  Tests.cpp  Tests.h  lib.h  student.cpp  student.hpp  vector.cpp
Vector_Class/Student_tests/: Student_testing.cpp
Vector_Class/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _data_manip_8cpp.html  _data_manip_8h.html  _data_manip_8h_source.html  _error_handling_8cpp.html  _error_handling_8h.html  _error_handling_8h_source.html  _i_omanip_8cpp.html  _i_omanip_8h.html  _i_omanip_8h_source.html  _tests_8cpp.html  _tests_8h.html  _tests_8h_source.html  annotated.html  classes.html  classstud-members.html  classstud.html  classzmogus-members.html  classzmogus.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_e9d2c87952e388da8e570b477721a3fc.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  lib_8h.html  lib_8h_source.html  menudata.js  (+4 more)
Vector_Class/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _data_manip_8cpp.tex  _data_manip_8h.tex  _data_manip_8h_source.tex  _i_omanip_8cpp.tex  (+26 more)
(+69 files in other folders)
